--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
   }
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -25,6 +29,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
 
 @layer utilities {
   .text-balance {
