--- a/app/globals.css
+++ b/app/globals.css
@@ -21,13 +21,8 @@ html{
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #fff;
+  background: #151515;
 }
 
 
